k8s/gateway-api/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-lab-envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
